tests/ui/external_control_reintroduction.stderr
error[E0425]: cannot find type `ExternalControl` in module `hibana::substrate::cap`
 --> tests/ui/external_control_reintroduction.rs:4:58
  |
4 | ...te::cap::ExternalControl<LoopContinueK...
  |             ^^^^^^^^^^^^^^^ not found in `hibana::substrate::cap`
